--- a/index.html
+++ b/index.html
@@ -1027,7 +1027,7 @@
 			Bhargava Veera Bhadra Guduru
 		</pre>
 	</div>
-	<iframe src='https://webchat.botframework.com/embed/Zozo-bot?s=YOUR_SECRET_HERE'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+	<iframe src='https://webchat.botframework.com/embed/Zozo-bot?s=BdajEQzhjDY.3ZHE9EknMDad4EPssFTaPOIRGNFc8cPoY2Owf_ltC6I'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 	</section>
 	<!-- js -->
 	<script src="js/jquery-2.2.3.min.js"></script>
