--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
 						<li>
 							<a class="page-scroll" href="#contact">Contact</a>
 						</li>
+						<li>
+							<a class="page-scroll" href="https://bhargava-design.github.io/Zozo-Muisc-Creation-Project/Zozo%20Bot.html">Zozo Bot</a>
+						</li>
 
 					</ul>
 
