--- a/single.html
+++ b/single.html
@@ -184,8 +184,7 @@
 	<!-- //footer -->
 	<div class="cpy-right-agile-w3ls">
 		<pre>
-			© 2023 ZoZo. All rights reserved | Design by 
-		    Bhargava Veera Bhadra Guduru
+			© 2023 ZoZo. All rights reserved | Design by Bhargava Veera Bhadra Guduru
 		</pre>
 	</div>
 	<!-- js -->
