--- a/index.html
+++ b/index.html
@@ -1026,9 +1026,7 @@
 	</div>
 	<!-- //footer -->
 	<div class="cpy-right-agile-w3ls">
-		<pre>© 2023 Zozo Music. All rights reserved | Design by
-			Bhargava Veera Bhadra Guduru
-		</pre>
+		<p> © 2023 Zozo Music. All rights reserved | Design by Bhargava Veera Bhadra Guduru </p>
 	</div>
 	<iframe src='https://webchat.botframework.com/embed/Zozo-bot?s=BdajEQzhjDY.3ZHE9EknMDad4EPssFTaPOIRGNFc8cPoY2Owf_ltC6I'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 	</section>
