--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 				<div class="item item2">
 					<div class="container">
 						<div class="carousel-caption">
-							<h3>Touching heaven on frequency.</h3>
+							<h3>Touch the heaven by frequency.</h3>
 
 							<div class="bnr-button">
 								<a class="act" href="single.html">Read More</a>
@@ -163,7 +163,7 @@
 					<div class="container">
 						<div class="carousel-caption">
 
-							<h3>Touching heaven on frequency.</h3>
+							<h3>Touch the heaven by frequency.</h3>
 
 							<div class="bnr-button">
 								<a class="act" href="single.html">Read More</a>
@@ -196,7 +196,7 @@
 						</div>
 						<div class="ab-bottom-grid-text">
 							<h4>Beat Store </h4>
-							<p>Lorem ipsum magna, vehicula ut scelerisque ornare porta ete.</p>
+							<p>It's a very large vehicle, so you can decorate the door with chocolate.</p>
 						</div>
 					</div>
 					<div class="ab-bottom-text-info">
@@ -205,7 +205,7 @@
 						</div>
 						<div class="ab-bottom-grid-text">
 							<h4>Track Beat Plays </h4>
-							<p>Lorem ipsum magna, vehicula ut scelerisque ornare porta ete.</p>
+							<p>It's a very large vehicle, so you can decorate the door with chocolate.</p>
 						</div>
 					</div>
 					<div class="ab-bottom-text-info">
@@ -214,7 +214,7 @@
 						</div>
 						<div class="ab-bottom-grid-text">
 							<h4>Music Contracts </h4>
-							<p>Lorem ipsum magna, vehicula ut scelerisque ornare porta ete.</p>
+							<p>Lorem It's a very large vehicle, so you can decorate the door with chocolate.</p>
 						</div>
 					</div>
 				</div>
@@ -228,7 +228,7 @@
 						</div>
 						<div class="ab-bottom-grid-text">
 							<h4>Discounts & Coupons </h4>
-							<p>Lorem ipsum magna, vehicula ut scelerisque ornare porta ete.</p>
+							<p>It's a very large vehicle, so you can decorate the door with chocolate</p>
 						</div>
 					</div>
 					<div class="ab-bottom-text-info">
@@ -237,7 +237,7 @@
 						</div>
 						<div class="ab-bottom-grid-text">
 							<h4>Instant Payments </h4>
-							<p>Lorem ipsum magna, vehicula ut scelerisque ornare porta ete.</p>
+							<p>It's a very large vehicle, so you can decorate the door with chocolate.</p>
 						</div>
 					</div>
 					<div class="ab-bottom-text-info">
@@ -246,7 +246,7 @@
 						</div>
 						<div class="ab-bottom-grid-text">
 							<h4>Music Contracts </h4>
-							<p>Lorem ipsum magna, vehicula ut scelerisque ornare porta ete.</p>
+							<p>It's a very large vehicle, so you can decorate the door with chocolate</p>
 						</div>
 					</div>
 				</div>
@@ -266,17 +266,17 @@
 					<div class="col-md-4 ser-first-grid text-center">
 						<span class="fas fa-music" aria-hidden="true"></span>
 						<h3>Custom Player</h3>
-						<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Mauris ac tristique arcu..</p>
+						<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. A big and sad bow..</p>
 					</div>
 					<div class="col-md-4 ser-first-grid text-center">
 						<span class="fas fa-headphones" aria-hidden="true"></span>
 						<h3>Discography</h3>
-						<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Mauris ac tristique arcu.</p>
+						<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. A big and sad bow...</p>
 					</div>
 					<div class="col-md-4 ser-first-grid text-center">
 						<span class="fas fa-microphone" aria-hidden="true"></span>
 						<h3>Tour Dates</h3>
-						<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Mauris ac tristique arcu.</p>
+						<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. A big and sad bow...</p>
 					</div>
 
 					<div class="clearfix"></div>
@@ -295,7 +295,7 @@
 					</div>
 					<div class="col-md-6 team-info">
 						<h4>Carl Haddon</h4>
-						<p>Lorem ipsum dolor sit amet consectetur elit.</p>
+						<p>The customer is very happy to be followed by the developer.</p>
 						<ul class="social_list_icons">
 							<li>
 								<a href="#">
@@ -324,7 +324,7 @@
 				<div class="col-md-6 team-grid">
 					<div class="col-md-6 team-info">
 						<h4>Abdur Rob</h4>
-						<p>Lorem ipsum dolor sit amet consectetur elit.</p>
+						<p>The customer is very happy to be followed by the developer.</p>
 						<ul class="social_list_icons">
 							<li>
 								<a href="#">
@@ -357,7 +357,7 @@
 				<div class="col-md-6 team-grid">
 					<div class="col-md-6 team-info">
 						<h4>Abdur Rob</h4>
-						<p>Lorem ipsum dolor sit amet consectetur elit.</p>
+						<p>The customer is very happy to be followed by the developer.</p>
 						<ul class="social_list_icons">
 							<li>
 								<a href="#">
@@ -393,7 +393,7 @@
 					</div>
 					<div class="col-md-6 team-info">
 						<h4>Sumaiya Akter</h4>
-						<p>Lorem ipsum dolor sit amet consectetur elit.</p>
+						<p>The customer is very happy to be followed by the developer.</p>
 						<ul class="social_list_icons">
 							<li>
 								<a href="#">
@@ -429,8 +429,7 @@
 			<h3 class="tittle_w3ls">Latest News</h3>
 			<div class="about-top">
 				<h3 class="subheading">Rock'n'roll live!</h3>
-				<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer quis tristique est, et egestas odio. Mauris ac tristique
-					arcu, sed interdum risus.Integer quis tristique est, et egestas odio. Mauris ac tristique arcu, sed interdum risus.
+				<p class="paragraph">The customer is very important, the customer will be followed by the customer. Who is full of sadness, and needs hatred. Mauris and sad bow, but sometimes laughter. A rich and sad bow, but sometimes a smile.
 				</p>
 			</div>
 			<div class="about-main">
@@ -439,7 +438,7 @@
 
 				<div class="col-md-6 about-right">
 					<h3>Towards wind and waves</h3>
-					<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer quis tristique est, et egestas odio, sed interdum risus.</p>
+					<p class="paragraph">The customer is very important, the customer will be followed by the customer. Who is completely sad, and needs hatred, but sometimes laughs.</p>
 					<div class="event-bottom">
 						<p class="comment">
 							<span class="far fa-calendar-alt"></span> Feb 16 2018</p>
@@ -473,7 +472,7 @@
 
 				<div class="col-md-6 about-right two">
 					<h3>Towards wind and waves</h3>
-					<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer quis tristique est, et egestas odio, sed interdum risus.</p>
+					<p class="paragraph">The customer is very important, the customer will be followed by the customer. Who is completely sad, and needs hatred, but sometimes laughs.</p>
 					<div class="event-bottom">
 						<p class="comment">
 							<span class="far fa-calendar-alt"></span> Feb 17 2018</p>
@@ -686,8 +685,7 @@
 											</a>
 
 										</div>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer quis tristique est, et egestas odio. Mauris ac
-											tristique arcu, sed interdum risus....</p>
+										<p>The customer is very important, the customer will be followed by the customer. Who is full of sadness, and needs hatred. The main actor's bow, but sometimes the smile....</p>
 										<ins class="ab zmin sprite sprite-i-triangle block"></ins>
 									</div>
 									<div class="person-text rel">
@@ -720,8 +718,7 @@
 											</a>
 
 										</div>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer quis tristique est, et egestas odio. Mauris ac
-											tristique arcu, sed interdum risus.... </p>
+										<p>The customer is very important, the customer will be followed by the customer. Who is full of sadness, and needs hatred. The main actor's bow, but sometimes the smile... </p>
 										<ins class="ab zmin sprite sprite-i-triangle block"></ins>
 									</div>
 									<div class="person-text rel">
@@ -754,8 +751,7 @@
 											</a>
 
 										</div>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer quis tristique est, et egestas odio. Mauris ac
-											tristique arcu, sed interdum risus.... </p>
+										<p>The customer is very important, the customer will be followed by the customer. Who is full of sadness, and needs hatred. The main actor's bow, but sometimes the smile...</p>
 										<ins class="ab zmin sprite sprite-i-triangle block"></ins>
 									</div>
 									<div class="person-text rel">
@@ -790,8 +786,7 @@
 											</a>
 
 										</div>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer quis tristique est, et egestas odio. Mauris ac
-											tristique arcu, sed interdum risus....</p>
+										<p>The customer is very important, the customer will be followed by the customer. Who is full of sadness, and needs hatred. The main actor's bow, but sometimes the smile...</p>
 										<ins class="ab zmin sprite sprite-i-triangle block"></ins>
 									</div>
 									<div class="person-text rel">
@@ -824,8 +819,7 @@
 											</a>
 
 										</div>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer quis tristique est, et egestas odio. Mauris ac
-											tristique arcu, sed interdum risus.... </p>
+										<p>The customer is very important, the customer will be followed by the customer. Who is full of sadness, and needs hatred. The main actor's bow, but sometimes the smile... </p>
 										<ins class="ab zmin sprite sprite-i-triangle block"></ins>
 									</div>
 									<div class="person-text rel">
@@ -858,8 +852,7 @@
 											</a>
 
 										</div>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer quis tristique est, et egestas odio. Mauris ac
-											tristique arcu, sed interdum risus.... </p>
+										<p>The customer is very important, the customer will be followed by the customer. Who is full of sadness, and needs hatred. The main actor's bow, but sometimes the smile...</p>
 										<ins class="ab zmin sprite sprite-i-triangle block"></ins>
 									</div>
 									<div class="person-text rel">
