--- a/single.html
+++ b/single.html
@@ -125,24 +125,15 @@
 
 					<img src="images/banner2.jpg" alt=" " class="img-responsive">
 
-					<p class="read_para">In consectetur, elit in scelerisque malesuada, tellus leo viverra massa, nec malesuada turpis lectus ac urna. Suspendisse
-						ut neque orci. dapibus nibh convallis, semper augue.
-						<i>Nunc a urna turpis. Aenean vestibulum elementum nisi. Aenean aliquet nec mi et lacinia. Aliquam maximus iaculis mi
-							elit in scelerisque malesuada, tellus leo viverra massa, sed efficitur orci efficitur nec.</i> In consectetur, elit
-						in scelerisque malesuada, tellus leo viverra massa, nec malesuada turpis lectus ac urna. Suspendisse ut neque orci.
-						Phasellus tellus diam, pulvinar sit amet elit sit amet, fermentum viverra eros. Praesent neque purus, rhoncus nec nibh
-						non, mollis sodales odio.</p>
+					<p class="read_para">In consequence, the elitist in the chocolate of the male, the earth of the lion, the mass of the cartoon, nor the male of the ugly bed and urn. He was not a doctor. dapibus nibh convallis, semper augue. Aeneas is an element of the vestibule. Aenean trucks and not mine and lacinia. Some of the greatest targets are honeyed in chocolate, the earth is a mass of lions, but it is not achieved orc is not achieved.</i> Suspended so that there is no pain. It's not pure, it's not cool, it's soft, it's soft.</p>
 				</div>
 				<div class="col-md-6 read_img">
 					<img src="images/g2.jpg" alt=" " class="img-responsive">
 				</div>
 				<div class="col-md-6 read-img-info">
-					<p>In consectetur, elit in scelerisque malesuada, tellus leo viverra massa, nec malesuada turpis lectus ac urna. Suspendisse
-						ut neque orci. dapibus nibh convallis, semper augue. In consectetur, elit in scelerisque malesuada, tellus leo viverra
-						massa, nec malesuada turpis lectus ac urna. Suspendisse ut neque orci. Phasellus tellus diam, pulvinar sit amet elit
+					<p>In consequence, the elitist in the chocolate of the male, the earth of the lion, the mass of the cartoon, nor the male of the ugly bed and urn. He was not a doctor. dapibus nibh convallis, semper auge In consequence, the elitist in the chocolate of the male, the earth of the lion cartoon, nor the male of the ugly bed and urn. Massage is not a medical treatment. Let the plane be the plane of the earth, let the pillow be the plane
 					</p>
-					<p>Tellus leo viverra massa, nec malesuada turpis lectus ac urna. Suspendisse ut neque orci. dapibus nibh convallis, semper
-						augue. In consectetur, elit in scelerisque malesuada, tellus leo viverra massa, nec malesuada turpis lectus ac urna.
+					<p>The earth was a mass of lions, and the bed and urn were not expected. Massage is not a medical treatment. dapibus nibh convallis, semperaugue In consequence, the elitist in the chocolate of the male, the earth of the lion, the mass of the cartoon, nor the male of the ugly bed and urn.
 					</p>
 					<div class="ab_button">
 						<a class="btn btn-primary btn-lg" href="index.html" role="button">Back to Home</a>
