--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
 							<i class="fas fa-music"></i>
 						</div>
 						<div class="ab-bottom-grid-text">
-							<h4>Beat Store </h4>
-							<p>It's a very large vehicle, so you can decorate the door with chocolate.</p>
+							<h4>Audio Play Back </h4>
+							<p>It's a very large play back music with streaming capabilities, and the ability to create playlists</p>
 						</div>
 					</div>
 					<div class="ab-bottom-text-info">
@@ -205,7 +205,7 @@
 						</div>
 						<div class="ab-bottom-grid-text">
 							<h4>Track Beat Plays </h4>
-							<p>It's a very large vehicle, so you can decorate the door with chocolate.</p>
+							<p>Play your music with high volume as you can the track beats you up..</p>
 						</div>
 					</div>
 					<div class="ab-bottom-text-info">
@@ -214,7 +214,7 @@
 						</div>
 						<div class="ab-bottom-grid-text">
 							<h4>Music Contracts </h4>
-							<p>Lorem It's a very large vehicle, so you can decorate the door with chocolate.</p>
+							<p>Zozo contracts with my music players than another website</p>
 						</div>
 					</div>
 				</div>
@@ -228,7 +228,7 @@
 						</div>
 						<div class="ab-bottom-grid-text">
 							<h4>Discounts & Coupons </h4>
-							<p>It's a very large vehicle, so you can decorate the door with chocolate</p>
+							<p>Get exiciting discounts and coupons by subscribing the website. Please Subcribe with your mail.</p>
 						</div>
 					</div>
 					<div class="ab-bottom-text-info">
@@ -237,7 +237,7 @@
 						</div>
 						<div class="ab-bottom-grid-text">
 							<h4>Instant Payments </h4>
-							<p>It's a very large vehicle, so you can decorate the door with chocolate.</p>
+							<p>Pay for the subscription with any of  UPI apps. Do subscribe for the music and enjoy the play</p>
 						</div>
 					</div>
 					<div class="ab-bottom-text-info">
@@ -246,7 +246,7 @@
 						</div>
 						<div class="ab-bottom-grid-text">
 							<h4>Music Contracts </h4>
-							<p>It's a very large vehicle, so you can decorate the door with chocolate</p>
+							<p>The Zozo music contracts with many of band players so far to enjoy the love of audio and music</p>
 						</div>
 					</div>
 				</div>
@@ -266,17 +266,17 @@
 					<div class="col-md-4 ser-first-grid text-center">
 						<span class="fas fa-music" aria-hidden="true"></span>
 						<h3>Custom Player</h3>
-						<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. A big and sad bow..</p>
+						<p>Customarize players like Trim your music and download your music on IOS or Android...</p>
 					</div>
 					<div class="col-md-4 ser-first-grid text-center">
 						<span class="fas fa-headphones" aria-hidden="true"></span>
 						<h3>Discography</h3>
-						<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. A big and sad bow...</p>
+						<p>A catalog of all the officially released recordings by a particular artist, band, or musical group. Zozo provides a chronological or categorized overview of their albums, singles, EPs (extended plays), and other recorded works.</p>
 					</div>
 					<div class="col-md-4 ser-first-grid text-center">
 						<span class="fas fa-microphone" aria-hidden="true"></span>
 						<h3>Tour Dates</h3>
-						<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. A big and sad bow...</p>
+						<p>we provide a feature that displays the upcoming live performances or concerts of an artist or band. Zozo provides information about the dates, venues, cities, and other relevant details of their scheduled performances</p>
 					</div>
 
 					<div class="clearfix"></div>
@@ -294,8 +294,8 @@
 						<img src="images/a1.jpg" alt="">
 					</div>
 					<div class="col-md-6 team-info">
-						<h4>Carl Haddon</h4>
-						<p>The customer is very happy to be followed by the developer.</p>
+						<h4>Bob Dylan</h4>
+						<p>Born: May 24, 1941 (age 82), Duluth, Minnesota, United States,who moved from folk to rock music in the 1960s, infusing the lyrics of rock and roll,</p>
 						<ul class="social_list_icons">
 							<li>
 								<a href="#">
@@ -323,8 +323,8 @@
 				</div>
 				<div class="col-md-6 team-grid">
 					<div class="col-md-6 team-info">
-						<h4>Abdur Rob</h4>
-						<p>The customer is very happy to be followed by the developer.</p>
+						<h4>Freddie Mercury</h4>
+						<p>British singer, songwriter, record producer and graphic designer.Born on September 5, 1946, Stone Town, Tanzania</p>
 						<ul class="social_list_icons">
 							<li>
 								<a href="#">
@@ -356,8 +356,8 @@
 				</div>
 				<div class="col-md-6 team-grid">
 					<div class="col-md-6 team-info">
-						<h4>Abdur Rob</h4>
-						<p>The customer is very happy to be followed by the developer.</p>
+						<h4>Prince</h4>
+						<p>an American singer, songwriter, musician, and record producer.Born and raised in Minneapolis, Prince signed a record deal with Warner Bros. Records at the age of 19, soon releasing the albums</p>
 						<ul class="social_list_icons">
 							<li>
 								<a href="#">
@@ -392,8 +392,8 @@
 						<img src="images/a4.jpg" alt="">
 					</div>
 					<div class="col-md-6 team-info">
-						<h4>Sumaiya Akter</h4>
-						<p>The customer is very happy to be followed by the developer.</p>
+						<h4>David Bowie</h4>
+						<p>inducted into the Rock and Roll Hall of Fame in 1996. Rolling Stone ranked him among the greatest artists in history.</p>
 						<ul class="social_list_icons">
 							<li>
 								<a href="#">
@@ -429,7 +429,7 @@
 			<h3 class="tittle_w3ls">Latest News</h3>
 			<div class="about-top">
 				<h3 class="subheading">Rock'n'roll live!</h3>
-				<p class="paragraph">The customer is very important, the customer will be followed by the customer. Who is full of sadness, and needs hatred. Mauris and sad bow, but sometimes laughter. A rich and sad bow, but sometimes a smile.
+				<p class="paragraph">THe live is on 23 Sep 2023 at Texas in United States . LEts join and make the event success. The very famous artist and pop player is now coming to the event and is suprise to every one.
 				</p>
 			</div>
 			<div class="about-main">
@@ -438,18 +438,18 @@
 
 				<div class="col-md-6 about-right">
 					<h3>Towards wind and waves</h3>
-					<p class="paragraph">The customer is very important, the customer will be followed by the customer. Who is completely sad, and needs hatred, but sometimes laughs.</p>
+					<p class="paragraph">A new lanuch of music towards wind and waves by David Bowie. Get ready to listen the music my dear music lovers..</p>
 					<div class="event-bottom">
 						<p class="comment">
-							<span class="far fa-calendar-alt"></span> Feb 16 2018</p>
+							<span class="far fa-calendar-alt"></span> Aug 20 2023</p>
 						<ul>
 							<li>
 								<a href="#">
-									<span class="far fa-thumbs-up"></span> 15</a>
+									<span class="far fa-thumbs-up"></span> 21k</a>
 							</li>
 							<li>
 								<a href="#">
-									<span class="far fa-comments"></span> 15</a>
+									<span class="far fa-comments"></span> 18k</a>
 
 							</li>
 							<li>
@@ -464,26 +464,24 @@
 							</li>
 						</ul>
 					</div>
-
-				</div>
 				<div class="clearfix"> </div>
 			</div>
 			<div class="about-main sec">
 
 				<div class="col-md-6 about-right two">
-					<h3>Towards wind and waves</h3>
-					<p class="paragraph">The customer is very important, the customer will be followed by the customer. Who is completely sad, and needs hatred, but sometimes laughs.</p>
+					<h3>REALIEZ</h3>
+					<p class="paragraph">TKang Daniel drops 1st solo English-language song as part of new album ‘REALIEZ'. Now streaming through out the world.</p>
 					<div class="event-bottom">
 						<p class="comment">
-							<span class="far fa-calendar-alt"></span> Feb 17 2018</p>
+							<span class="far fa-calendar-alt"></span> Jul 23 2023</p>
 						<ul>
 							<li>
 								<a href="#">
-									<span class="far fa-thumbs-up"></span> 15</a>
+									<span class="far fa-thumbs-up"></span> 90k</a>
 							</li>
 							<li>
 								<a href="#">
-									<span class="far fa-comments"></span> 15</a>
+									<span class="far fa-comments"></span> 2k</a>
 
 							</li>
 							<li>
@@ -640,7 +638,7 @@
 			<div class="newsleft_w3_agileinfo">
 				<h3>Stay in Touch</h3>
 
-				<p>Sign up for newsletter_w3ls_agile !</p>
+				<p>Sign up for newsletter_Zozo_Music...!</p>
 			</div>
 			<div class="newsright_agileits_wthree">
 				<form action="#" method="post">
@@ -663,7 +661,7 @@
 							<div class="item active">
 								<div class="col-md-4 col-sm-6">
 									<div class="block-text rel zmin">
-										<a title="" href="#">Sub title here</a>
+										<a title="" href="#">Comments</a>
 										<div class="mark">My rating:
 											<a href="#">
 												<span class="fas fa-star"></span>
@@ -685,18 +683,18 @@
 											</a>
 
 										</div>
-										<p>The customer is very important, the customer will be followed by the customer. Who is full of sadness, and needs hatred. The main actor's bow, but sometimes the smile....</p>
+										<p>Wow, I had an amazing experience with the Zozo music player website! The selection of music available is fantastic, and the audio quality is top-notch. I was able to easily navigate through the website and find my favorite songs without any hassle. The user-friendly interface made my music listening session a breeze.</p>
 										<ins class="ab zmin sprite sprite-i-triangle block"></ins>
 									</div>
 									<div class="person-text rel">
 										<img src="images/t1.jpg" class="img-responsive" alt=" ">
-										<a title="" href="#">Anna</a>
+										<a title="" href="#">Anadh Sharma</a>
 										<i>United States</i>
 									</div>
 								</div>
 								<div class="col-md-4 col-sm-6 hidden-xs">
 									<div class="block-text rel zmin">
-										<a title="" href="#">Sub title here</a>
+										<a title="" href="#">Comments</a>
 										<div class="mark">My rating:
 											<a href="#">
 												<span class="fas fa-star"></span>
@@ -718,7 +716,7 @@
 											</a>
 
 										</div>
-										<p>The customer is very important, the customer will be followed by the customer. Who is full of sadness, and needs hatred. The main actor's bow, but sometimes the smile... </p>
+										<p>I particularly loved how Zozo music player offers personalized recommendations based on my listening preferences. It introduced me to some incredible new artists and songs that I wouldn't have discovered otherwise. The curated playlists were also a delightful addition, providing a seamless flow of music for every mood.</p>
 										<ins class="ab zmin sprite sprite-i-triangle block"></ins>
 									</div>
 									<div class="person-text rel">
@@ -729,7 +727,7 @@
 								</div>
 								<div class="col-md-4 col-sm-6 hidden-sm hidden-xs">
 									<div class="block-text rel zmin">
-										<a title="" href="#">Sub title here</a>
+										<a title="" href="#">Comments</a>
 										<div class="mark">My rating:
 											<a href="#">
 												<span class="fas fa-star"></span>
@@ -751,7 +749,7 @@
 											</a>
 
 										</div>
-										<p>The customer is very important, the customer will be followed by the customer. Who is full of sadness, and needs hatred. The main actor's bow, but sometimes the smile...</p>
+										<p>the website's design is visually appealing and modern, creating a pleasant and immersive music listening environment. The loading times were quick, ensuring a seamless experience throughout my visit.</p>
 										<ins class="ab zmin sprite sprite-i-triangle block"></ins>
 									</div>
 									<div class="person-text rel">
@@ -764,7 +762,7 @@
 							<div class="item">
 								<div class="col-md-4 col-sm-6">
 									<div class="block-text rel zmin">
-										<a title="" href="#">Sub title here</a>
+										<a title="" href="#">Comments</a>
 										<div class="mark">My rating:
 											<a href="#">
 												<span class="fas fa-star"></span>
@@ -786,18 +784,18 @@
 											</a>
 
 										</div>
-										<p>The customer is very important, the customer will be followed by the customer. Who is full of sadness, and needs hatred. The main actor's bow, but sometimes the smile...</p>
+										<p> Zozo music player for creating such a fantastic platform for music enthusiasts like me. I highly recommend it to anyone looking for a top-quality music streaming experience. Keep up the great work!"</p>
 										<ins class="ab zmin sprite sprite-i-triangle block"></ins>
 									</div>
 									<div class="person-text rel">
 										<img src="images/t4.jpg" class="img-responsive" alt=" ">
-										<a title="" href="#">Anna</a>
+										<a title="" href="#">Shenna</a>
 										<i>United States</i>
 									</div>
 								</div>
 								<div class="col-md-4 col-sm-6 hidden-xs">
 									<div class="block-text rel zmin">
-										<a title="" href="#">Sub title here</a>
+										<a title="" href="#">Comments</a>
 										<div class="mark">My rating:
 											<a href="#">
 												<span class="fas fa-star"></span>
@@ -819,18 +817,18 @@
 											</a>
 
 										</div>
-										<p>The customer is very important, the customer will be followed by the customer. Who is full of sadness, and needs hatred. The main actor's bow, but sometimes the smile... </p>
+										<p>I'm absolutely impressed with the Zozo music player website! The vast music library, coupled with its intuitive search function, allowed me to find my favorite songs effortlessly. The seamless streaming quality made my music listening experience truly enjoyable. Thumbs up! </p>
 										<ins class="ab zmin sprite sprite-i-triangle block"></ins>
 									</div>
 									<div class="person-text rel">
 										<img src="images/t1.jpg" class="img-responsive" alt=" ">
-										<a title="" href="#">Ella Mentree</a>
+										<a title="" href="#">Johnny</a>
 										<i>United States</i>
 									</div>
 								</div>
 								<div class="col-md-4 col-sm-6 hidden-sm hidden-xs">
 									<div class="block-text rel zmin">
-										<a title="" href="#">Sub title here</a>
+										<a title="" href="#">Comments</a>
 										<div class="mark">My rating:
 											<a href="#">
 												<span class="fas fa-star"></span>
@@ -852,12 +850,12 @@
 											</a>
 
 										</div>
-										<p>The customer is very important, the customer will be followed by the customer. Who is full of sadness, and needs hatred. The main actor's bow, but sometimes the smile...</p>
+										<p>Zozo music player is my go-to platform for discovering new music. The 'Recommended for You' feature always introduces me to artists and songs that align perfectly with my taste. It's like having a personalized DJ curating the best tracks just for me. I can't get enough of it!/p>
 										<ins class="ab zmin sprite sprite-i-triangle block"></ins>
 									</div>
 									<div class="person-text rel">
 										<img src="images/t2.jpg" class="img-responsive" alt=" ">
-										<a title="" href="#">Rannynm</a>
+										<a title="" href="#">Goutham Bhargav</a>
 										<i>United States</i>
 									</div>
 								</div>
