--- a/single.html
+++ b/single.html
@@ -131,9 +131,9 @@
 					<img src="images/g2.jpg" alt=" " class="img-responsive">
 				</div>
 				<div class="col-md-6 read-img-info">
-					<p>In consequence, the elitist in the chocolate of the male, the earth of the lion, the mass of the cartoon, nor the male of the ugly bed and urn. He was not a doctor. dapibus nibh convallis, semper auge In consequence, the elitist in the chocolate of the male, the earth of the lion cartoon, nor the male of the ugly bed and urn. Massage is not a medical treatment. Let the plane be the plane of the earth, let the pillow be the plane
+					<p>Is it too late now to say sorry?'Cause I'm missing more than just your body
 					</p>
-					<p>The earth was a mass of lions, and the bed and urn were not expected. Massage is not a medical treatment. dapibus nibh convallis, semperaugue In consequence, the elitist in the chocolate of the male, the earth of the lion, the mass of the cartoon, nor the male of the ugly bed and urn.
+					<p>I'm more than just an option, hey, hey, hey Refuse to be forgotten, hey, hey, hey
 					</p>
 					<div class="ab_button">
 						<a class="btn btn-primary btn-lg" href="index.html" role="button">Back to Home</a>
