--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 						</div>
 						<div class="ab-bottom-grid-text">
 							<h4>Audio Play Back </h4>
-							<p>It's a very large play back music with streaming capabilities, and the ability to create playlists</p>
+							<p>It's a very large play back music with streaming capabilities,to create playlists</p>
 						</div>
 					</div>
 					<div class="ab-bottom-text-info">
@@ -295,7 +295,7 @@
 					</div>
 					<div class="col-md-6 team-info">
 						<h4>Bob Dylan</h4>
-						<p>Born: May 24, 1941 (age 82), Duluth, Minnesota, United States,who moved from folk to rock music in the 1960s, infusing the lyrics of rock and roll,</p>
+						<p>Born: May 24, 1941 (age 82), Duluth, Minnesota, United States,who moved from folk to rock music in the 1960s,</p>
 						<ul class="social_list_icons">
 							<li>
 								<a href="#">
@@ -357,7 +357,7 @@
 				<div class="col-md-6 team-grid">
 					<div class="col-md-6 team-info">
 						<h4>Prince</h4>
-						<p>an American singer, songwriter, musician, and record producer.Born and raised in Minneapolis, Prince signed a record deal with Warner Bros. Records at the age of 19, soon releasing the albums</p>
+						<p>an American singer, songwriter, musician, and record producer.Born and raised in Minneapolis.</p>
 						<ul class="social_list_icons">
 							<li>
 								<a href="#">
@@ -688,7 +688,7 @@
 									</div>
 									<div class="person-text rel">
 										<img src="images/t1.jpg" class="img-responsive" alt=" ">
-										<a title="" href="#">Anadh Sharma</a>
+										<a title="" href="#">Ella Mentree</a>
 										<i>United States</i>
 									</div>
 								</div>
@@ -721,7 +721,7 @@
 									</div>
 									<div class="person-text rel">
 										<img src="images/t2.jpg" class="img-responsive" alt=" ">
-										<a title="" href="#">Ella Mentree</a>
+										<a title="" href="#">Anadh Sharma</a>
 										<i>United States</i>
 									</div>
 								</div>
@@ -749,7 +749,7 @@
 											</a>
 
 										</div>
-										<p>the website's design is visually appealing and modern, creating a pleasant and immersive music listening environment. The loading times were quick, ensuring a seamless experience throughout my visit.</p>
+										<p>The website's design is visually appealing and modern, creating a pleasant and immersive music listening environment. The loading times were quick, ensuring a seamless experience throughout my visit.</p>
 										<ins class="ab zmin sprite sprite-i-triangle block"></ins>
 									</div>
 									<div class="person-text rel">
@@ -789,7 +789,7 @@
 									</div>
 									<div class="person-text rel">
 										<img src="images/t4.jpg" class="img-responsive" alt=" ">
-										<a title="" href="#">Shenna</a>
+										<a title="" href="#">Goutham Bhargav</a>
 										<i>United States</i>
 									</div>
 								</div>
@@ -822,7 +822,7 @@
 									</div>
 									<div class="person-text rel">
 										<img src="images/t1.jpg" class="img-responsive" alt=" ">
-										<a title="" href="#">Johnny</a>
+										<a title="" href="#">Shaggi</a>
 										<i>United States</i>
 									</div>
 								</div>
@@ -855,7 +855,7 @@
 									</div>
 									<div class="person-text rel">
 										<img src="images/t2.jpg" class="img-responsive" alt=" ">
-										<a title="" href="#">Goutham Bhargav</a>
+										<a title="" href="#">Manoj Mohan</a>
 										<i>United States</i>
 									</div>
 								</div>
