--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,7 @@
 	</div>
 	<!-- //footer -->
 	<div class="cpy-right-agile-w3ls">
-		<p> © 2023 Zozo Music. All rights reserved | Design by @ Bhargava Veera Bhadra Guduru </p>
+		<p> © 2023 Zozo Music. All rights reserved | Design by @ Bhargava_Veera_Bhadra_Guduru </p>
 	</div>
 	<iframe src='https://webchat.botframework.com/embed/Zozo-bot?s=BdajEQzhjDY.3ZHE9EknMDad4EPssFTaPOIRGNFc8cPoY2Owf_ltC6I'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 	</section>
