--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
 						<a href="images/g1.jpg" class="b-link-stripe b-animate-go lightninBox" data-lb-group="1">
 							<img src="images/g1.jpg" class="img-responsive" alt=" " />
 							<div class="b-wrapper">
-								<h4>Zozo Music</h4>
+								<h4>Australia</h4>
 							</div>
 						</a>
 					</div>
@@ -566,7 +566,7 @@
 						<a href="images/g2.jpg" class="b-link-stripe b-animate-go lightninBox" data-lb-group="1">
 							<img src="images/g2.jpg" class="img-responsive" alt=" " />
 							<div class="b-wrapper">
-								<h4>Zozo Music</h4>
+								<h4>United States</h4>
 
 							</div>
 						</a>
@@ -575,7 +575,7 @@
 						<a href="images/g3.jpg" class="b-link-stripe b-animate-go lightninBox" data-lb-group="1">
 							<img src="images/g3.jpg" class="img-responsive" alt=" " />
 							<div class="b-wrapper">
-								<h4>Zozo Music</h4>
+								<h4>Tokya</h4>
 
 							</div>
 						</a>
@@ -585,7 +585,7 @@
 					<a href="images/g10.jpg" class="b-link-stripe b-animate-go lightninBox" data-lb-group="1">
 						<img src="images/g10.jpg" class="img-responsive" alt=" " />
 						<div class="b-wrapper">
-							<h4>Zozo Music</h4>
+							<h4>Mumbai</h4>
 
 						</div>
 					</a>
@@ -594,7 +594,7 @@
 					<a href="images/g11.jpg" class="b-link-stripe b-animate-go lightninBox" data-lb-group="1">
 						<img src="images/g11.jpg" class="img-responsive" alt=" " />
 						<div class="b-wrapper">
-							<h4>Zozo Music</h4>
+							<h4>South Korea</h4>
 
 						</div>
 					</a>
@@ -604,7 +604,7 @@
 						<a href="images/g5.jpg" class="b-link-stripe b-animate-go lightninBox" data-lb-group="1">
 							<img src="images/g5.jpg" class="img-responsive" alt=" " />
 							<div class="b-wrapper">
-								<h4>Zozo Music</h4>
+								<h4>Eroupe</h4>
 
 							</div>
 						</a>
@@ -613,7 +613,7 @@
 						<a href="images/g4.jpg" class="b-link-stripe b-animate-go lightninBox" data-lb-group="1">
 							<img src="images/g4.jpg" class="img-responsive" alt=" " />
 							<div class="b-wrapper">
-								<h4>Zozo Music</h4>
+								<h4>Indonesia</h4>
 							</div>
 						</a>
 					</div>
@@ -621,7 +621,7 @@
 						<a href="images/g6.jpg" class="b-link-stripe b-animate-go lightninBox" data-lb-group="1">
 							<img src="images/g6.jpg" class="img-responsive" alt=" " />
 							<div class="b-wrapper">
-								<h4>Zozo Music</h4>
+								<h4>Japan</h4>
 
 							</div>
 						</a>
